--- a/part4/add_review.html
+++ b/part4/add_review.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+	<header>
+		<img src="/Users/angelarhin/Desktop/holbertonschool-hbnb/part4/images/logo.png" alt="logo">
+		 <nav>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
+        </nav>
+	</header>
     <main>
         <!-- Add something to idfentify the place you're reviewing -->
         <form id="review-form">
@@ -20,6 +26,10 @@
             <button type="submit">Submit Review</button>
         </form>
     </main>
+	<hr>
+	<footer>
+		<p>© HBnB Evolution. All Right Reserved.</p>
+	</footer>
     <script src="scripts.js"></script>
 </body>
 </html>
