--- a/part4/index.html
+++ b/part4/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="login.html" id="login-link">Login</a>
+		<img src="/Users/angelarhin/Desktop/holbertonschool-hbnb/part4/images/logo.png" alt="logo">
+		 <nav>
+            <a href="login.html" id="login-link" class="login-button">Login</a>
         </nav>
-    </header>
+	</header>
     <main>
         <section id="filter">
             <label for="price-filter">Max Price:</label>
@@ -23,6 +24,10 @@
             <!-- List of places will be populated dynamically -->
         </section>
     </main>
+	<hr>
+	<footer>
+		<p>© HBnB Evolution. All Right Reserved.</p>
+	</footer>
     <script src="scripts.js"></script>
 </body>
 </html>
