fix : navigation in the header and typo in the footer

--- a/part4/place.html
+++ b/part4/place.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<header>
-		<a href="index.html"><img src="/Users/angelarhin/Desktop/holbertonschool-hbnb/part4/images/logo.png" alt="logo"></a>
 		 <nav>
+			<a href="index.html"><img src="/Users/angelarhin/Desktop/holbertonschool-hbnb/part4/images/logo.png" alt="logo" class="logo"></a>
             <a href="login.html" id="login-link" class="login-button">Login</a>
         </nav>
 	</header>
@@ -32,7 +32,7 @@
     </main>
 	<hr>
 	<footer>
-		<p>© HBnB Evolution. All Right Reserved.</p>
+		<p>© HBnB Evolution. All Rights Reserved.</p>
 	</footer>
     <script src="scripts.js"></script>
 </body>
