change the path of the logo

--- a/part4/place.html
+++ b/part4/place.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		 <nav>
-			<a href="index.html"><img src="/Users/angelarhin/Desktop/holbertonschool-hbnb/part4/images/logo.png" alt="logo" class="logo"></a>
+			<a href="index.html"><img src="images/logo.png" alt="logo" class="logo"></a>
             <a href="login.html" id="login-link" class="login-button">Login</a>
         </nav>
 	</header>
