--- a/part4/index.html
+++ b/part4/index.html
@@ -15,13 +15,30 @@
 	</header>
     <main>
         <section id="filter">
+			<p> Available Places</p>
             <label for="price-filter">Max Price:</label>
             <select id="price-filter">
                 <!-- Options will be populated dynamically -->
             </select>
         </section>
-        <section id="places-list">
-            <!-- List of places will be populated dynamically -->
+        <section id="places-list" class="place-card">
+            <ul>
+				<li>
+					Beautiful Beach House
+					Price per night : $150
+					<button class="details-button">Views Details</button>
+				</li>
+				<li>
+					Cozin Cabin
+					Price per night : $100
+					<button class="details-button">Views Details</button>
+				</li>
+				<li>
+					Modern Apartment
+					Price per night : $200
+					<button class="details-button">Views Details</button>
+				</li>
+			</ul>
         </section>
     </main>
 	<hr>
