modify section and add div

--- a/part4/index.html
+++ b/part4/index.html
@@ -21,24 +21,25 @@
                 <!-- Options will be populated dynamically -->
             </select>
         </section>
-        <section id="places-list" class="place-card">
-            <ul>
-				<li>
-					Beautiful Beach House
-					Price per night : $150
-					<button class="details-button">Views Details</button>
-				</li>
-				<li>
-					Cozin Cabin
-					Price per night : $100
-					<button class="details-button">Views Details</button>
-				</li>
-				<li>
-					Modern Apartment
-					Price per night : $200
-					<button class="details-button">Views Details</button>
-				</li>
-			</ul>
+
+        <section id="places-list">
+			<div class="place-card">
+				<h3>Beautiful Beach House</h3>
+				<p>Price per night : $150</p>
+				<button class="details-button">View Details</button>
+			</div>
+				
+			<div class="place-card">
+				<h3>Cozin Cabin</h3>
+				<p>Price per night : $100</p>
+				<button class="details-button">View Details</button>
+			</div>
+
+			<div class="place-card">
+				<h3>Modern Apartment</h3>
+				<p>Price per night : $200</p>
+				<button class="details-button">View Details</button>
+			</div>
         </section>
     </main>
 	<hr>
