--- a/part4/place.html
+++ b/part4/place.html
@@ -14,13 +14,21 @@
         </nav>
 	</header>
     <main>
-        <section id="place-details">
-            <!-- Place details will be populated dynamically -->
+        <section id="place-details" class="place-details">
+            <h2>Cozy Cabin</h2>
+  			<div class="place-info">
+    			<p><strong>Host:</strong> John Doe</p>
+    			<p><strong>Price:</strong> $100 per night</p>
+    			<p><strong>Description:</strong> A cozy place in the woods.</p>
+    			<p><strong>Amenities:</strong> Wifi, Fireplace</p>
+  			</div>
         </section>
+
         <section id="reviews">
             <!-- Reviews will be populated dynamically -->
         </section>
-        <section id="add-review">
+
+        <section id="add-review" class="add-review form">
             <h2>Add a Review</h2>
             <form id="review-form">
                 <label for="review-text">Review:</label>
