--- a/part4/add_review.html
+++ b/part4/add_review.html
@@ -18,11 +18,12 @@
         <!-- Add something to idfentify the place you're reviewing -->
         <form id="review-form">
             <h2>Add a Review for <span id="place-name">Cozy Cabin</span></h2>
-			<input type="hidden" id="place-id" value="123"/>
+			<input type="hidden" id="place-id" value="123">
             <label for="review">Your Review:</label>
             <textarea id="review" name="review" required></textarea>
             <label for="rating">Rating:</label>
             <select id="rating" name="rating" required>
+				<option value="" disabled selected>Choose a rating</option>
                 <option value="1">1</option>
 				<option value="2">2</option>
 				<option value="3">3</option>
