modify paragraph with h2 for the first section

--- a/part4/index.html
+++ b/part4/index.html
@@ -16,7 +16,7 @@
 	</header>
     <main>
         <section id="filter">
-			<p> Available Places</p>
+			<h2> Available Places</h2>
             <label for="price-filter">Max Price:</label>
             <select id="price-filter">
                 <!-- Options will be populated dynamically -->
