add title for Reviews

--- a/part4/place.html
+++ b/part4/place.html
@@ -26,6 +26,7 @@
         </section>
 
         <section id="reviews">
+			<h2>Reviews</h2>
             <!-- Reviews will be populated dynamically -->
         </section>
 
