--- a/part4/place.html
+++ b/part4/place.html
@@ -16,33 +16,37 @@
 	</header>
     <main>
         <section id="place-details" class="place-details">
-            <h2>Cozy Cabin</h2>
+            <h2 class="title">Beautiful Beach House</h2>
   			<div class="place-info">
     			<p><strong>Host:</strong> John Doe</p>
-    			<p><strong>Price:</strong> $100 per night</p>
-    			<p><strong>Description:</strong> A cozy place in the woods.</p>
-    			<p><strong>Amenities:</strong> Wifi, Fireplace</p>
+    			<p><strong>Price:</strong> $150 per night</p>
+    			<p><strong>Description:</strong> A beautiful beach house with amazing views...</p>
+    			<p><strong>Amenities:</strong> Wifi, Pool, Air Conditioning</p>
   			</div>
         </section>
 
         <section id="reviews">
-			<h2>Reviews</h2>
-            <!-- Reviews will be populated dynamically -->
-        </section>
+			<h3>Reviews</h3>
+            <div class="review-card">
+				<p><strong>User:</strong> Emma Watson</p>
+				<p><strong>Rating:</strong> ★★★★☆</p>
+				<p>"Amazing place! Very clean and comfortable."</p>
+			</div>
+
+			<div class="review-card">
+				<p><strong>User:</strong> James Miller</p>
+				<p><strong>Rating:</strong> ★★★☆☆</p>
+				<p>"Good location but the wifi was slow."</p>
+			</div>
+   		 </section>
 
         <section id="add-review" class="add-review form">
-            <h2>Add a Review</h2>
-            <form id="review-form">
-                <label for="review-text">Review:</label>
-                <textarea id="review-text" name="review-text" required></textarea>
-                
-                <button type="submit">Submit</button>
-            </form>
-        </section>
+            <a href="add_review.html" class="details-button">Add a Review</a>
+    	</section>
     </main>
 	<hr>
-	<footer>
-		<p>© HBnB Evolution. All Rights Reserved.</p>
+	<footer class="footer">
+		<p class="p">© HBnB Evolution. All Rights Reserved.</p>
 	</footer>
     <script src="scripts.js"></script>
 </body>
