--- a/part4/place.html
+++ b/part4/place.html
@@ -46,7 +46,7 @@
     </main>
 	<hr>
 	<footer class="footer">
-		<p class="p">© HBnB Evolution. All Rights Reserved.</p>
+		<p>© HBnB Evolution. All Rights Reserved.</p>
 	</footer>
     <script src="scripts.js"></script>
 </body>
