--- a/part4/index.html
+++ b/part4/index.html
@@ -51,7 +51,7 @@
     </main>
 	<hr>
 	<footer class="footer">
-		<p class="p">© HBnB Evolution. All Rights Reserved.</p>
+		<p>© HBnB Evolution. All Rights Reserved.</p>
 	</footer>
     <script src="scripts.js"></script>
 </body>
