add class for buttons

--- a/part4/add_review.html
+++ b/part4/add_review.html
@@ -31,7 +31,7 @@
 				<option value="5">5</option>
 
             </select>
-            <button type="submit">Submit Review</button>
+            <button type="submit" class="submit">Submit Review</button>
         </form>
     </main>
 	<hr>
