--- a/part4/login.html
+++ b/part4/login.html
@@ -23,7 +23,7 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             
-            <button type="submit">Login</button>
+            <button type="submit" class="submit">Login</button>
         </form>
     </main>
 	<hr>
